Beta v2.0.5.6.7 - Revised debug code - Resolved issue with 'Q' dropping recipe results while crafting - Resolved 'ghost crafts' from attempting to craft a recipe with your cursor full
Tab Completion:
  - Added 'items' as cr sub-command
  - Changed recipe return list to return keys rather than names

GUI:
  - The menu now correctly returns to the recipe type sub-menu rather than the main menu.
  - The menu saves your 'main' recipe and now allows you to diverge into other recipes within a main one.
  - Fixed the creation menu on v1.8.8
  - Fixed other menu errors related to v1.8.8